tests/neg/semantic_global_array_nonconst_init.baa
// EXPECT: تهيئة المصفوفة الساكنة

صحيح س = ١.
صحيح أ[٢] = {س، ٢}.

صحيح الرئيسية() {
    إرجع ٠.
}
